<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homefr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".View.Fragments.LentaPageFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:text="22 Растения"
        android:textColor="@color/bluedark"
        android:textSize="18sp"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="94dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="17dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="34dp"
        android:text="Уход за которыми вы можете изучить"
        android:textColor="@color/bluedark"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="256dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="40dp" />

    <ImageView
        android:id="@+id/listok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/lenta_listok"
        tools:layout_conversion_absoluteHeight="37dp"
        tools:layout_conversion_absoluteWidth="37dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recview"
        android:layout_width="match_parent"
        android:layout_height="686dp"
        android:layout_marginTop="57dp"
        tools:context=".MainActivity"
        tools:layout_conversion_absoluteHeight="731dp"
        tools:layout_conversion_absoluteWidth="393dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bttmnavbackground"
        app:itemIconSize="25dp"
        app:itemIconTint="@color/bluedark"
        app:itemTextColor="@color/bluedark"

        app:menu="@menu/bttmnav" />


</FrameLayout>