<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".View.Fragments.Page_Profile">

    <!-- TODO: Update blank fragment layout -->
...
        app:itemIconTint="@color/bluedark"
        app:itemTextColor="@color/bluedark"

        app:menu="@menu/bttmnav" />

    <ImageButton
        android:id="@+id/addbttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:backgroundTint="#00FFFFFF"
        app:srcCompat="@drawable/pluss" />

...
