...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:placeholderText="Имя"
        app:startIconDrawable="@drawable/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:maxLength="10"
...
        app:layout_constraintBottom_toTopOf="@+id/nameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button_nextpage_plants"
        android:layout_width="272dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/bluedark"
        android:text="Далее"
        android:textSize="20dp"
        app:cornerRadius="10dp"
...
